# World-Cup-Predictor

./: .gitignore  README.md  pyproject.toml
src/worldcup_predictor/: cli.py  config.py  data.py  elo.py  features.py  model.py
tests/: test_cli.py  test_elo.py  test_features.py  test_model.py
