[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "CLI World Cup match outcome predictor using Elo features and XGBoost."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
worldcup-predict = "worldcup_predictor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
